Bug 241653 - "random" can't be switched off
Summary: "random" can't be switched off
Status: RESOLVED FIXED
Alias: None
Product: kscd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-13 15:42 UTC by Adrian von Bidder
Modified: 2013-04-16 01:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments
Fix 'random' button behaviour, now it can be toggled. (1.10 KB, patch)
2013-03-28 14:45 UTC, Carlo Vanini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adrian von Bidder 2010-06-13 15:42:52 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

(KDE 4.4.4 is not selectable in bugzilla)

When I press the random button, it's stuck on.  Clicking with the mouse gets the same behaviour as on any non-widget part of the GUI: the mouse can be used to move the kscd window.

Reproducible: Always

Steps to Reproduce:
press the random button

Actual Results:  
Clicking with the mouse gets the same behaviour as on any non-widget part of the GUI: the mouse can be used to move the kscd window.

Expected Results:  
The random function is switched off.  Duh.
Comment 1 Carlo Vanini 2013-03-28 14:45:27 UTC
Created attachment 78459 [details]
Fix 'random' button behaviour, now it can be toggled.

With this patch the button is left pressed when random is enabled. When clicking again the button goes back to default and random is disabled.

Please note: this fixes just the button, random mode still has some other issues.
Comment 2 Christoph Feck 2013-04-16 01:22:11 UTC
Git commit 41aa1c2466b64f5b12b0f5f6b72693e013c333a0 by Christoph Feck, on behalf of Carlo Vanini.
Committed on 16/04/2013 at 03:19.
Pushed by cfeck into branch 'master'.

Fix stuck random button
FIXED-IN: 4.11

M  +1    -8    gui/randombutton.cpp
M  +1    -0    hwcontroler.cpp

http://commits.kde.org/kscd/41aa1c2466b64f5b12b0f5f6b72693e013c333a0