Fix stuck random button

BUG: 241653
FIXED-IN: 4.11